crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__assert_eq_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        eq
        assert(0)
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
    end
end
