crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__assert_eqw_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        movup4
        eq
        assert(0)
        movup3
        eq
        assert(0)
        movup2
        eq
        assert(0)
        eq
        assert(0)
        movup4
        eq
        assert(15491226248792286710)
        movup3
        eq
        assert(15491226248792286710)
        movup2
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
        movup4
        eq
        assert(15491226248792286710)
        movup3
        eq
        assert(15491226248792286710)
        movup2
        eq
        assert(15491226248792286710)
        eq
        assert(15491226248792286710)
        noop
    end
end
