crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__assert_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        assert(0)
        assert(15491226248792286710)
        assert(15491226248792286710)
        noop
    end
end
