crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__assertz_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        eqz
        assert(0)
        eqz
        assert(15491226248792286710)
        eqz
        assert(15491226248792286710)
    end
end
