crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__mtree_verify_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        mpverify(0)
        mpverify(13948122101519563734)
        mpverify(17575088163785490049)
        noop
    end
end
