crates/assembly/src/tests/snapshots/miden_assembly__tests__assertions__u32assertw_with_code.snap
---
source: crates/assembly/src/tests/assertions.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        u32assert2(0)
        movup3
        movup3
        u32assert2(0)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        u32assert2(15491226248792286710)
        movup3
        movup3
        noop
        noop
        noop
    end
end
